--- a/css-pseudo-classes/styles.css
+++ b/css-pseudo-classes/styles.css
@@ -6,7 +6,8 @@ button {
 button:hover {
   background-color: black;
   color: white;
-  transition-duration: 0.08s;
+  cursor: pointer;
+  transition-duration: 0.06s;
 }
 
 thead {
