--- a/css-brochure-form/css-brochure-form/styles.css
+++ b/css-brochure-form/css-brochure-form/styles.css
@@ -35,9 +35,10 @@ select {
   width: 100%;
   margin-top: 0.2rem;
   margin-bottom: 0.4rem;
-  padding: 0.3rem;
-  background-color: rgb(241 234 241);
-  border-radius: 7px;
+  padding: 0.6rem 0.3rem;
+  background-color: rgb(241 241 241);
+  border-radius: 5px;
+  font-size: 0.65rem;
 }
 
 button {
