--- a/css-brochure-form/css-brochure-form/styles.css
+++ b/css-brochure-form/css-brochure-form/styles.css
@@ -10,6 +10,7 @@ h4 {
   margin-bottom: 0.5rem;
   color: rgb(255 88 70);
   font-family: "Brandon Grotesque", sans-serif;
+  font-weight: 300;
   letter-spacing: 0.05rem;
   text-align: center;
 }
@@ -17,8 +18,7 @@ h4 {
 label {
   font-family: "Brandon Grotesque", sans-serif;
   font-weight: 500;
-  letter-spacing: 0.03rem;
-  font-size: 0.65rem;
+  font-size: 0.6rem;
   padding-left: 0.55rem;
 }
 
