--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -90,12 +90,16 @@
 .herotext p {
   color: rgb(255 255 255);
   padding-left: 1.5rem;
-  line-height: 1.5rem;
   padding-top: 2rem;
 }
 
 .herotext h1 {
   font-family: "Tiempos Headline", Times, serif;
+  line-height: 2.5rem;
+}
+
+.herotext p {
+  line-height: 1.4rem;
 }
 
 .herobutt {
@@ -124,6 +128,7 @@
 }
 
 .otherbg {
+  padding-top: 2.5vh;
   background-color: rgb(248 248 248);
 }
 
@@ -148,6 +153,8 @@
 .otherlist {
   list-style-type: none;
   line-height: 1.4rem;
+  padding-top: 2vh;
+  padding-bottom: 3vh;
 }
 
 /* OTHERS OTHERS OTHERS OTHERS OTHERS OTHERS OTHERS OTHERS OTHERS OTHERS */
