--- a/css-four-column-layout/styles.css
+++ b/css-four-column-layout/styles.css
@@ -27,4 +27,18 @@
 * {
   text-align: center;
   background-color: rgb(247 248 250);
+  font-family: Barlow, sans-serif;
+}
+
+h1 {
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 1.1rem;
+}
+
+p {
+  padding-top: 0.4rem;
+  font-size: 0.85rem;
 }
