--- a/css-ecommerce-page/styles.css
+++ b/css-ecommerce-page/styles.css
@@ -3,7 +3,7 @@
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 900px;
   margin: 0 auto;
 }
 
@@ -30,13 +30,13 @@ h5 {
 }
 
 .row img {
-  width: auto;
-  height: 13rem;
+  width: 100%;
+  max-height: 14.7rem;
   object-fit: contain;
 }
 
 .grey {
-  color: rgb(185 185 185);
+  color: #d4d4d4;
   font-size: 0.6rem;
 }
 
