--- a/css-canvas-medical/layout.css
+++ b/css-canvas-medical/layout.css
@@ -12,6 +12,7 @@
 .col20 { width: 20%; }
 .col25 { width: 25%; }
 .col33 { width: calc(100% / 3); }
+.col40 { width: 40%; }
 .col50 { width: 50%; }
 .col60 { width: 60%; }
 .col66 { width: calc(200% / 3); }
